# BredOS-Welcome

./: .gitignore  README.md  crowdin.yml  launch.py  meson.build  welcome.py  welcome_support.py
data/: meson.build  org.bredos.welcome.appdata.xml.in  org.bredos.welcome.desktop.in  org.bredos.welcome.gresource  org.bredos.welcome.gresource.xml  org.bredos.welcome.gschema.xml
data/icons/: meson.build
data/ui/: ui2.ui  welcome.cmb  window.ui
packaging/bredos-welcome/: PKGBUILD
po/: POTFILES  bg.po  da.po  de.po  el.po  en.po  es.po  fi.po  fr.po  hr.po  hu.po  it.po  ja.po  ko.po  meson.build  nl.po  no.po  pl.po  ru.po  sv.po  tr.po  welcome.pot
